# MyCryptoNets

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  Weights.txt  main.cpp  util.h
apps/LoLa/resources/: LinerWeights.txt
apps/cryptonets/: DataPreprocess.h  Main.cpp
apps/cryptonets/resources/: ConvIllustration.txt  FC2Illustration.txt  LinerWeights.txt  MyLinerWeights.txt  MyWeights.txt
include/: HEWrapper.h  LLNeuralNetworks.h  NeuralNetworks.h  SealBfvCrtWrapper.h  SealBfvVector.h  Util.h  core.h
test/: HEWrapperTest.cpp  LLNeuralNetworksTest.cpp  NeuralNetworksTest.cpp  SealBenchmark.cpp  SealBfvCrtWrapperTest.cpp  SealBfvVectorTest.cpp  Tests.cpp  tests.cpp
